Added DeepSeek and Removed stop_layer_idx from rl_policy

--- a/llama3_test.ipynb
+++ b/llama3_test.ipynb
@@ -80,6 +80,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -194,20 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ENtered custom llama model\n"
+      "-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*\n",
+      "Entered custom llama model\n",
+      "-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06f9fd80772d404e842e5cdf44e02aa3",
+       "model_id": "9ce9ec75ac7f4a7588bf192046c45137",
        "version_major": 2,
        "version_minor": 0
       },
