--- a/llama3_test.ipynb
+++ b/llama3_test.ipynb
@@ -259,7 +259,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ullmenv",
+   "display_name": "qllmenv",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
